<resources>
    <string name="app_name">Music Reborn</string>
    <string name="contentDescription">contentDescription</string>
    <string name="head">Android Music</string>
    <string name="song_name">musica</string>
    <string name="artist">Artista</string>
    <string name="duration">00:00</string>
    <string name="fav">Favoritas</string>
    <string name="list">PlayList</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contentDescription2">backwardBtn</string>
    <string name="contentDescription3">playBtn</string>
    <string name="contentDescription4">forwardBtn</string>
    <string name="default_web_client_id">Android</string>

    <string name="contentDescription5">album nuevo</string>
    <string name="contentDescription7">fav</string>
    <string name="contentDescription8">repetir</string>
    <string name="noneLiked">No hay musicas seleccionadas como favoritas</string>
    <string name="appAdId">ca-app-pub-2360133179842292~9912166929</string>
</resources>