<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#280159"
    tools:context=".PlayerActivity">

    <LinearLayout
        android:id="@+id/controlBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingVertical="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/previous"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:background="@drawable/btn_shape"
            android:contentDescription="@string/contentDescription2"
            android:src="@drawable/backarrow"
            tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/backward"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="8dp"
            android:background="@drawable/btn_shape"
            android:contentDescription="@string/contentDescription2"
            android:src="@drawable/backward"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/play"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/btn_shape"
            android:backgroundTint="#FFD700"
            android:contentDescription="@string/contentDescription3"
            android:src="@drawable/play"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/forward"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="8dp"
            android:background="@drawable/btn_shape"
            android:contentDescription="@string/contentDescription4"
            android:src="@drawable/forward"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/songName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/song_name"
        android:textColor="#FFD700"
        android:textIsSelectable="true"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="18sp"
        app:autoSizeMaxTextSize="34sp"
        app:layout_constraintTop_toBottomOf="@id/controlBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:id="@+id/artistContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/songName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/Artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefinsans_semibold"
            android:text="@string/artist"
            android:textColor="#7AC2BB"
            android:ellipsize="marquee"
            android:maxLength="25"
            android:maxLines="1"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <ImageButton
            android:id="@+id/liked"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/btn_shape"
            android:contentDescription="@string/contentDescription7"
            android:src="@drawable/like"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

        <ImageButton
            android:id="@+id/equalizer"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/btn_shape"
            android:contentDescription="@string/contentDescription7"
            android:src="@drawable/equalizer"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintDimensionRatio="H,1:1.15"
        app:layout_constraintTop_toBottomOf="@id/artistContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/albumArt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img"
            android:scaleType="centerCrop"
            android:contentDescription="@string/contentDescription5"
            android:background="@drawable/background_shape" />

        <ImageButton
            android:id="@+id/repeat"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_shape2"
            android:src="@drawable/repeatlock"
            android:contentDescription="@string/contentDescription8"/>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/cover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/recover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefinsans_regular"
            android:text="@string/duration"
            android:textColor="#7AC2BB"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seeking"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="16dp"
            android:thumbTint="#7AC2BB"/>

        <TextView
            android:id="@+id/covered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefinsans_regular"
            android:text="@string/duration"
            android:textColor="#7AC2BB"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>