<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#340C5F"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/head"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/conso_lab"
        android:gravity="center"
        android:text="@string/head"
        android:textColor="#EDF6F5"
        android:textSize="32sp"
        android:textStyle="normal"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="16sp"
        app:autoSizeMaxTextSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/conso_lab"
        android:gravity="center"
        android:text="@string/noneLiked"
        android:textColor="#EDF6F5"
        android:textSize="18sp"
        android:visibility="invisible"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeMaxTextSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/head"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/msg">

        <ImageButton
            android:id="@+id/shuffle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/btn_shape3"
            android:contentDescription="@string/contentDescription7"
            android:src="@drawable/shuffle"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

        <ImageButton
            android:id="@+id/removeAll"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/btn_shape3"
            android:contentDescription="@string/contentDescription7"
            android:src="@drawable/trash"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />
    </LinearLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:singleSelection="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonContainer">

        <com.google.android.material.chip.Chip
            android:id="@+id/fav"
            style="@style/CustomStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefinsans_semibold"
            android:text="@string/fav"
            android:textSize="16sp"
            app:checkedIcon="@drawable/check"
            app:checkedIconEnabled="true"
            app:chipCornerRadius="20dp"
            app:chipIconSize="22dp"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/songView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingHorizontal="16dp"
        android:clipToPadding="false"
        android:clipChildren="false"
        app:layout_constraintTop_toBottomOf="@id/chipGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/nowPlaying"
        tools:listitem="@layout/list_style" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nowPlaying"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:name="com.app.bliss.NowPlaying"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout="@layout/fragment_now_playing" />

</androidx.constraintlayout.widget.ConstraintLayout>
